--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			<div class="col-sm-10">
 			<p></p><p></p>
 				<h4>由于部分谷歌可视化编程工具访问不便，故搭建此网页方便大家学习与使用。</h4>
-				<a href="cooc/index.html">
+				<a href="cooc/index.html">cooc show</a>
 			</div>
         </div>
       </div>
